# registro-notas-academicas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/registro_notas/: notas.py
tests/: test_notas.py
tests/features/: notas.feature
tests/step_defs/: test_notas_steps.py
