[project]
name = "registro-notas-academicas"
version = "0.1.0"
description = "Modulo de registro de notas academicas - Preparcial Pruebas de Software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-bdd>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
markers = [
    "smoke: pruebas de humo mas criticas, deben pasar siempre",
    "critical: escenarios de negocio que no pueden fallar",
    "regression: escenarios de regresion mas amplios",
]

[tool.coverage.run]
source = ["src/registro_notas"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registro_notas"]
